# mipt_cpp_hw

./: .gitignore  05.05.cpp  07.01.cpp  07.02.cpp  07.03.cpp  07.04  07.04.cpp  07.05  07.05.cpp  08.01.cpp  08.02.cpp  08.03.cpp  08.04.cpp  08.05.cpp  08.13.hpp  tasks.md
06.05/: CMakeLists.txt
06.05/source/: main.cpp  shared_v1.cpp  shared_v2.cpp
